tests/rosetta/out/C/almost-prime.error
cc: exit status 1
/tmp/almost-prime.c: In function ‘mochi_main’:
/tmp/almost-prime.c:80:23: error: incompatible type for argument 1 of ‘_str’
   80 |     char *tmp5 = _str(gen(k, 10));
      |                       ^~~~~~~~~~
      |                       |
      |                       list_int
/tmp/almost-prime.c:38:23: note: expected ‘int’ but argument is of type ‘list_int’
   38 | static char *_str(int v) {
      |                   ~~~~^
