tests/rosetta/out/C/almost-prime.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:47Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:47Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int kPrime(int n, int k) {
  __auto_type nf = 0;
  __auto_type i = 2;
  while (i <= n) {
    while (n % i == 0) {
      if (nf == k) {
        return 0;
      }
      nf = nf + 1;
      n = ((double)n) / ((double)i);
    }
    i = i + 1;
  }
  return nf == k;
}

list_int gen(int k, int count) {
  list_int r = list_int_create(0);
  __auto_type n = 2;
  while ((0 < count)) {
    if (kPrime(n, k)) {
      int tmp1_data[1];
      list_int tmp1 = {1, tmp1_data};
      tmp1.data[0] = n;
      list_int tmp2 = concat_list_int(r, tmp1);
      r = tmp2;
    }
    n = n + 1;
  }
  return r;
}

int mochi_main() {
  __auto_type k = 1;
  while (k <= 5) {
    char *tmp3 = _str(k);
    char *tmp4 = concat_string(tmp3, " ");
    char *tmp5 = _str(gen(k, 10));
    char *tmp6 = concat_string(tmp4, tmp5);
    printf("%s\n", tmp6);
    k = k + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
